theme/twenty/static/css/style.css
/* ... */
		#sideButton .toggle:after {
			background: rgba(163, 169, 170, 0.75);
			border-radius: 2px;
			content: '';
			height: 40px;
			left: 10px;
			position: absolute;
			top: 10px;
			width: 60px;
		}

	#topPanel,
	#sidePanel {
		background: #1c2021;
		color: white;
		font-size: 0.8em;
		letter-spacing: 0.075em;
		text-transform: uppercase;
	}

		#topPanel nav,
		#sidePanel nav {
			padding: 0.25em 0.5em 1em 0.5em;
		}

		#topPanel .link,
		#sidePanel .link {
			border: 0;
			border-top: solid 1px rgba(255, 255, 255, 0.05);
			color: inherit;
			display: block;
			height: 3em;
			line-height: 3em;
			opacity: 0.75;
			text-decoration: none;
		}

			#topPanel .link.depth-0,
			#sidePanel .link.depth-0 {
				font-weight: 900;
			}

			#topPanel .link:first-child,
			#sidePanel .link:first-child {
				border-top: 0;
			}

		#topPanel .indent-1,
		#sidePanel .indent-1 {
			display: inline-block;
			width: 1em;
		}

		#topPanel .indent-2,
		#sidePanel .indent-2 {
			display: inline-block;
			width: 2em;
		}

		#topPanel .indent-3,
		#sidePanel .indent-3 {
			display: inline-block;
			width: 3em;
		}

		#topPanel .indent-4,
		#sidePanel .indent-4 {
			display: inline-block;
			width: 4em;
		}

		#topPanel .indent-5,
		#sidePanel .indent-5 {
			display: inline-block;
			width: 5em;
		}

/* Pagination */

	div.pagination {
	    margin-top: 35px;
	}
	div.pagination-left {
	    float:left;
	}
	div.pagination-middle {
	    text-align:center;
	}
	div.pagination-right {
	    float: right;
	}


/* Syntax Highlighting */
	.highlight {
		font-family: 'Anonymous Pro';
	  font-style: normal;
	  font-weight: 400;
		background: #272822;
		color: #f8f8f2;
		padding: 20px;
		/*border-radius: 15px;*/
	}

/* Sidebars */

.sidebar {
	position: fixed;
	width: 200px;
	bottom: 10px;
	right: 0;
}

.sidebar div {
    text-align: center;
    background: rgb(124, 128, 129);
    color: rgb(243, 246, 250);
}

.sidebar p {
	font-size: 1.3em;
	margin: 0;
	padding: 10px;
}

.sidebar a {
	display: block;
	background: rgb(243, 246, 250);
	color: rgb(124, 128, 129);
    text-decoration: none;
    line-height: 1.5em;
    padding: 8px;
    font-weight: bold;
    text-align: center;
}

.sidebar a:hover {
	background: rgb(124, 128, 129);
	color: rgb(243, 246, 250);
}

